# orchidarium

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml-bak  BUILD.md  Dockerfile  IDEAS.md  README.md  compose.yaml  pyproject.toml  rpi_setup.sh
.github/: auto_assign.yml  settings.yml
config/boot/firmware/: cmdline.txt  config.txt
config/grafana/: config.ini
config/refs/: lsusb.out
config/rules/: humidity.rules  soil.rules
examples/: batches.py  hack.py  i2c.py
freecad/: Levi0 copy.FCStd  Levi0.FCStd  Levi0_1.20260427-011019.FCBak  Levi0_1.FCStd  Levi0_1.FCStd.17ac7447-9a9c-4094-af72-f5ef19941c02  Levi0_1.FCStd.20bf08d4-652b-4124-b5a6-f4f518445c37  Levi0_1.FCStd.92f374f3-4f07-4967-a950-38c0c1e2d560  Levi0_1.FCStd.a68cc833-9e70-40e9-ad93-5ad373f81cd0  Vesta.20260427-000548.FCBak  Vesta.20260427-005002.FCBak  Vesta.20260427-011559.FCBak  Vesta.FCStd  Vesta.FCStd.2b226dcf-cbf5-4fdd-a224-d674bc9c5c2a
freecad/terrarium_wall/work/: make_box_wall_tiles.py  make_delaunay_eroded_tube_tile.py  make_delaunay_eroded_tube_tile_low_profile.py
pkg/orchidarium/: __init__.py  daemon.py  entrypoint.py  logging.py  support.py
pkg/orchidarium/api/: __init__.py  health.py  queue.py  sensors.py
pkg/orchidarium/daemon/: __init__.py  _processes.py  api.py  hardware.py  metrics.py  processes.py  ui.py
pkg/orchidarium/data/: __init__.py  queue.py
pkg/orchidarium/hardware/: __init__.py
pkg/orchidarium/hardware/relay/: __init__.py  (+3 more)
pkg/orchidarium/lib/: bus.py  time.py
pkg/orchidarium/publishers/: _base.py  influxdb.py
pkg/orchidarium/runtime/: __init__.py  health.py  queue.py  state.py
pkg/orchidarium/sensors/: __init__.py  _base.py  discovery.py  humidity.py  mock.py  soil.py
pkg/orchidarium/ui/: __init__.py  config.py  entrypoint.py  main.py
scripts/: .env.sh  generate-test-self-signed-certs.sh  rpi_setup.sh  setup.sh
scripts/local/: down.sh  up.sh
src/environment/: __init__.py  entrypoint.py  support.py
src/environment/api/: __init__.py  health.py
src/environment/publishers/: __init__.py  _base.py  influxdb.py
src/environment/sensors/: _base.py  humidity.py  soil.py
src/hvac/: __init__.py  entrypoint.py
src/orchidarium/: __init__.py  entrypoint.py
src/orchidarium/api/: health.py
src/orchidarium/lib/: json.py  pinout.py
src/orchidarium/publishers/: influxdb.py
src/orchidarium/sensors/: __init__.py  _base.py  humidity.py  soil.py
src/pins/: entrypoint.py
src/ui/: config.py  entrypoint.py  main.py
src/ui/qml/: Main.qml  qmldir
terrarium_wall/: result.json
terrarium_wall/outputs/: box_wall_README.txt  delaunay_tile_4in_README.txt  delaunay_tile_4in_color_1_black.stl  delaunay_tile_6in_README.txt  delaunay_tile_6in_color_1_black.stl  delaunay_tile_box_corner_post.stl  delaunay_tile_corner_snap_connector.stl  delaunay_tile_straight_snap_connector.stl  pink_floyd_the_wall.3mf  result.json  smooth_coral_README.txt  smooth_coral_white.stl  tube_tile_6in_README.txt  tube_tile_corner_snap_connector.stl  tube_tile_straight_snap_connector.stl
terrarium_wall/outputs/box_wall_corner_post_4in/: box_wall_corner_post_4in.stl
terrarium_wall/outputs/box_wall_long_r1_c1/: box_wall_long_r1_c1_base_perforated_color_1_black.stl  box_wall_long_r1_c1_base_solid_color_1_black.stl  box_wall_long_r1_c1_tubes_color_3_white.stl
terrarium_wall/outputs/box_wall_long_r1_c2/: box_wall_long_r1_c2_base_solid_color_1_black.stl  box_wall_long_r1_c2_tubes_color_3_white.stl  box_wall_long_r1_c2_tubes_color_4_orange.stl
terrarium_wall/outputs/box_wall_long_r1_c3/: box_wall_long_r1_c3_base_solid_color_1_black.stl  box_wall_long_r1_c3_tubes_color_3_white.stl
terrarium_wall/outputs/box_wall_long_r1_c4/: box_wall_long_r1_c4_base_solid_color_1_black.stl  box_wall_long_r1_c4_tubes_color_3_white.stl
terrarium_wall/outputs/box_wall_long_r1_c5/: box_wall_long_r1_c5_tubes_color_3_white.stl
terrarium_wall/outputs/box_wall_long_r1_c6/: box_wall_long_r1_c6_base_solid_color_1_black.stl  box_wall_long_r1_c6_tubes_color_4_orange.stl
terrarium_wall/outputs/box_wall_long_r2_c1/: box_wall_long_r2_c1_base_perforated_color_1_black.stl  box_wall_long_r2_c1_base_solid_color_1_black.stl
terrarium_wall/outputs/box_wall_long_r2_c2/: box_wall_long_r2_c2_base_solid_color_1_black.stl  box_wall_long_r2_c2_tubes_color_3_white.stl
terrarium_wall/outputs/box_wall_long_r2_c3/: box_wall_long_r2_c3_tubes_color_3_white.stl
terrarium_wall/outputs/box_wall_long_r2_c4/: box_wall_long_r2_c4_base_perforated_color_1_black.stl  box_wall_long_r2_c4_base_solid_color_1_black.stl  box_wall_long_r2_c4_tubes_color_3_white.stl
terrarium_wall/outputs/box_wall_long_r2_c5/: box_wall_long_r2_c5_base_perforated_color_1_black.stl  box_wall_long_r2_c5_base_solid_color_1_black.stl  box_wall_long_r2_c5_tubes_color_4_orange.stl
terrarium_wall/outputs/box_wall_long_r2_c6/: box_wall_long_r2_c6_tubes_color_4_orange.stl
terrarium_wall/outputs/box_wall_long_r3_c1/: box_wall_long_r3_c1_tubes_color_4_orange.stl
terrarium_wall/outputs/box_wall_long_r3_c2/: box_wall_long_r3_c2_base_perforated_color_1_black.stl  box_wall_long_r3_c2_base_solid_color_1_black.stl  box_wall_long_r3_c2_tubes_color_3_white.stl
terrarium_wall/outputs/box_wall_long_r3_c3/: box_wall_long_r3_c3_base_solid_color_1_black.stl  box_wall_long_r3_c3_tubes_color_3_white.stl  box_wall_long_r3_c3_tubes_color_4_orange.stl
terrarium_wall/outputs/box_wall_long_r3_c4/: box_wall_long_r3_c4_base_perforated_color_1_black.stl
terrarium_wall/outputs/box_wall_long_r3_c6/: box_wall_long_r3_c6_base_perforated_color_1_black.stl  box_wall_long_r3_c6_base_solid_color_1_black.stl  box_wall_long_r3_c6_tubes_color_4_orange.stl
terrarium_wall/outputs/box_wall_short_r1_c1/: box_wall_short_r1_c1_base_perforated_color_1_black.stl  box_wall_short_r1_c1_base_solid_color_1_black.stl  box_wall_short_r1_c1_tubes_color_3_white.stl  box_wall_short_r1_c1_tubes_color_4_orange.stl
terrarium_wall/work/: make_box_wall_tiles.py  make_delaunay_eroded_tube_tile.py  make_delaunay_eroded_tube_tile_low_profile.py  make_smooth_coral_stl.py  make_tessellating_tube_tile.py
(+59 files in other folders)
