[tool.poetry]
name = "orchidarium"
version = "0.0.1"
description = ""
authors = ["Emma Doyle <emma.ann.doyle@gmail.com>"]
maintainers = ["Emma Doyle <emma.ann.doyle@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
  { include = "hvac", from = "src" },
  { include = "controller", from = "src" },
  { include = "environment", from = "src" },
  { include = "pins", from = "src" },
]
include = [
  "LICENSE"
]
keywords = [
    "python",
    "orchids",
    "plants",
    "terrarium",
    "hvac"
]

# https://pypi.org/classifiers/
# classifiers = [
#   "Development Status :: 2 - Pre-Alpha",
#   "Topic :: System :: Monitoring",
#   "Topic :: System :: Hardware",
#   "Topic :: System :: Clustering",
#   "Topic :: System :: Systems Administration",
#   "Topic :: Utilities",
#   "Natural Language :: English",
#   "License :: Other/Proprietary License",
#   "Programming Language :: Python :: 3 :: Only",
#   "Programming Language :: Python :: 3.10",
#   "Programming Language :: Python :: 3.11",
#   "Programming Language :: Python :: 3.12",
#   "Intended Audience :: Developers",
#   "Intended Audience :: System Administrators",
# ]

[tool.poetry.dependencies]
python = "^3.11"
pyusb = "^1.3.1"
sht20 = "^0.1.4"
smbus2 = "^0.5.0"
flask = "^3.1.2"
bitstring = "^4.3.1"
setproctitle = "^1.3.7"
flask-cors = "^6.0.1"
influxdb-client = {extras = ["ciso"], version = "^1.49.0"}
# cachetools

[tool.poetry.group.dev.dependencies]
# types-cachetools = "^6.2.0.20251022"
pre-commit = "^4.3.0"
mypy = "^1.18.2"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# There are many entrypoints so that we may test each component individually.

# This is the main process package that wraps the 'controller' and 'environment' entrypoints in subprocesses.
hvac = "hvac.entrypoint:cli"

# Alias entrypoint for the container.
orchidarium = "hvac.entrypoint:cli"

#
controller = "controller.entrypoint:cli"
pins = "pins.entrypoint:cli"
environment = "environment.entrypoint:cli"

[tool.mypy]
python_version = "3.11"
strict_optional = "true"
# strict = "true"
ignore_missing_imports = "true"
check_untyped_defs = "true"

[tool.pydoclint]
style = "google"
require-return-section-when-returning-nothing = false