[project]
name = "orchidarium"
version = "0.0.1"
description = "a monitoring and control agent designed for terrariums that require precise environmental conditions, particularly high-humidity setups for mini orchids and reptiles."
authors = [{ name = "Emma Doyle", email ="emma.ann.doyle@gmail.com" }]
maintainers = [{ name = "Emma Doyle", email = "emma.ann.doyle@gmail.com" }]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [
  { include = "orchidarium", from = "pkg" },
]
include = [
  "LICENSE"
]
keywords = [
    "python",
    "orchids",
    "plants",
    "terrarium",
    "hvac"
]

license-files = [
    "LICENSE"
]

requires-python = ">=3.13,<3.14"

# https://pypi.org/classifiers/
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Topic :: System :: Monitoring",
  "Topic :: System :: Hardware",
  "Topic :: System :: Clustering",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
  "Natural Language :: English",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
]

dependencies = [
    "pyusb (>=1.3,<2)",
    "sht20 (>=0.1.4)",
    "smbus2 (>=0.5.0)",
    "flask (>=3.1.2)",
    "bitstring (>=4.3.1)",
    "setproctitle (>=1.3.7)",
    "flask-cors (>=6.0.1)",
    "influxdb-client[ciso] (>=1.49)",
    "gpiozero (>=2.0)",
    "rpi.gpio (>=0.7.1)",
    "PySide6 (>=6.10)",
    "cachetools (>=7.0.5)"
]

[tool.poetry]
# Specify additional READMEs here.
readme = [
    "README.md"
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.group.dev.dependencies]
types-cachetools = "^6.2.0.20251022"
pre-commit = "^4.3.0"
mypy = "^1.18.2"
pylint = "^3.3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
orchidarium = "orchidarium.entrypoint:cli"

[project.gui-scripts]
gui = "ui.entrypoint:run"

[tool.mypy]
python_version = "3.13"
strict_optional = "true"
# strict = "true"
ignore_missing_imports = "true"
check_untyped_defs = "true"

[tool.pydoclint]
style = "google"
require-return-section-when-returning-nothing = false
